--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
-    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.11"
+    "mongoose": "^5.9.17"
   }
 }
